cluster/manifests/grafana/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    name: grafana
    pod-security.kubernetes.io/enforce: restricted
