cluster/manifests/grafana/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - grafana.minikube.127.0.0.1.nip.io
      port:
        number: 80
        name: http
        protocol: HTTP
