cluster/manifests/grafana/overlays/dev/service_entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: raw.githubusercontent.com
spec:
  exportTo:
    - .
  hosts:
    - raw.githubusercontent.com
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
